--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.64.2",
+    "axios": "^1.7.9",
     "ecommerce": "file:",
     "next": "15.1.5",
     "react": "^19.0.0",
@@ -23,6 +25,7 @@
     "@types/styled-components": "^5.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
+    "mini-css-extract-plugin": "^2.9.2",
     "typescript": "^5.7.3"
   }
 }
