--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "ecommerce": "file:",
     "next": "15.1.5",
     "react": "^19.0.0",
